objects/L2I_Aircraft__c.object
<CustomObject>
    <description>Custom object to hold Aircraft level information</description>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The type of the aircraft - may be a model (e.g. A380), master series (e.g. A380-800) or specific series (A380-841).  Contact Aircraft MDM to get a new type defined</inlineHelpText>
        <label>Aircraft Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>L2I_Aircraft_Type__c.L2I_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>Aircrafts</relationshipLabel>
        <relationshipName>Aircrafts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Delivery_Date__c</fullName>
        <inlineHelpText>The first date the aircraft was delivered to its original airline customer</inlineHelpText>
        <label>Aircraft Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Status__c</fullName>
        <inlineHelpText>The current status of the aircraft</inlineHelpText>
        <label>Aircraft Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Not In Service</fullName>
                </value>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Aircraft Master Data steward approval flag. Contact Aircraft MDM team for approval</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Block_Number__c</fullName>
        <inlineHelpText>Aircraft Manufacturer/OEM unique tracking identification number for this aircraft</inlineHelpText>
        <label>Block Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Fleet_Number__c</fullName>
        <inlineHelpText>Fleet/Nose number of the aircraft, often painted on the nose of the aircraft by the airline</inlineHelpText>
        <label>Fleet Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_GPIN__c</fullName>
        <inlineHelpText>Global Plane Identification Number (GPIN) - Should never change once assigned</inlineHelpText>
        <label>GPIN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Line_Number__c</fullName>
        <inlineHelpText>Line number of the aircraft, primarily used by Aircraft Manufacturer/OEM</inlineHelpText>
        <label>Line Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_New_Aircraft_Notification_Email_Add__c</fullName>
        <defaultValue>&quot;DL-AircraftMDM@panasonic.aero&quot;</defaultValue>
        <label>L2I New Aircraft Notification Email Add</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L2I_Operator_Party_ID__c</fullName>
        <inlineHelpText>The Oracle Party ID of the airline operator for this aircraft</inlineHelpText>
        <label>Operator Party ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Operator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The name of the airline operator for this aircraft</inlineHelpText>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircrafts (Operator)</relationshipLabel>
        <relationshipName>Operators</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Owner_Party_ID__c</fullName>
        <inlineHelpText>The Oracle Party ID of the owner for this aircraft</inlineHelpText>
        <label>Owner Party ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the owner (airline, leasing company, etc.) for this aircraft</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircrafts (Owner)</relationshipLabel>
        <relationshipName>Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_PAC_Aircraft_Master_Database_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The record ID of the Aircraft in the PAC Aircraft Master database table</inlineHelpText>
        <label>PAC Aircraft Master Database ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Preliminary_GPIN__c</fullName>
        <inlineHelpText>Preliminary Global Plane Identification Number (GPIN) - Should never change once assigned</inlineHelpText>
        <label>Preliminary GPIN</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Registration_Number__c</fullName>
        <description>Aircraft identification number assigned by a civil aviation authority (ex. FAA) - Often called &quot;tail number&quot; - Not an MSN, Block, Fleet or Line Number</description>
        <label>Registration Number (Tail Number)</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Serial_Number__c</fullName>
        <inlineHelpText>The aircraft&#39;s manufacturer serial number (MSN) - do not use MSN as a prefix</inlineHelpText>
        <label>Serial Number</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Suspended_Products__c</fullName>
        <label>Suspended Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Suspended_Product_Category_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_PMO_Serial__c</fullName>
        <formula>&#39;MSN&#39;+ L2I_Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>search helper</inlineHelpText>
        <label>PMO Serial</label>
        <type>Text</type>
    </fields>
    <label>Aircraft</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L2I_Aircraft_Status__c</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>L2I_Operator__c</columns>
        <columns>PT_PMO_Serial__c</columns>
        <columns>L2I_Registration_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approved_Aircraft_Lockdown_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT($Permission.L2I_Aircraft_Data_Steward_Edit),
(L2I_Approved__c = TRUE),
OR(
ISCHANGED(L2I_Aircraft_Status__c),
ISCHANGED(Name),
ISCHANGED(L2I_Owner__c), 
ISCHANGED(Aircraft_Type__c), 
ISCHANGED(L2I_Aircraft_Status__c),
ISCHANGED(L2I_GPIN__c),
ISCHANGED(L2I_Preliminary_GPIN__c),
ISCHANGED(L2I_Serial_Number__c),
ISCHANGED(L2I_Block_Number__c),
ISCHANGED(L2I_PAC_Aircraft_Master_Database_ID__c), 
ISCHANGED(L2I_Registration_Number__c), 
ISCHANGED(L2I_Fleet_Number__c),
ISCHANGED(L2I_Line_Number__c),
ISCHANGED(L2I_Aircraft_Delivery_Date__c),
ISCHANGED(OwnerId),
ISCHANGED(L2I_Operator__c)
))</errorConditionFormula>
        <errorMessage>Aircraft records that have been Approved can only be modified by Aircraft Data Stewards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Aircraft_Name_Unique</fullName>
        <active>true</active>
        <description>Aircraft Name must be unique</description>
        <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.L2I_Aircraft__c.Fields.Name , $ObjectType.L2I_Aircraft__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.L2I_Aircraft__c.Fields.Id , $ObjectType.L2I_Aircraft__c.Fields.Name, Name )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The name of your Aircraft must be unique</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Block_Number_Format</fullName>
        <active>true</active>
        <description>Block Number cannot start with &quot;MSN&quot;</description>
        <errorConditionFormula>BEGINS( L2I_Block_Number__c  , &quot;MSN&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Block_Number__c</errorDisplayField>
        <errorMessage>Invalid Block Number Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Fleet_Number_Format</fullName>
        <active>true</active>
        <description>Fleet Number cannot start with &quot;MSN&quot;</description>
        <errorConditionFormula>BEGINS(L2I_Fleet_Number__c , &quot;MSN&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Fleet_Number__c</errorDisplayField>
        <errorMessage>Invalid Fleet Number Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_GPIN_Charcter_Limits</fullName>
        <active>false</active>
        <description>GPIN must only contain the following characters: A-Z, a-z, 0-9 and dash &quot;-&quot;. This only applies to users with a profile/permission set containing &quot;L2I_Aircraft_Validation&quot; custom permission</description>
        <errorConditionFormula>AND(
NOT(REGEX( L2I_GPIN__c,&quot;^[a-zA-Z0-9\\-]*$&quot;)),
$Permission.L2I_Aircraft_Validation)</errorConditionFormula>
        <errorDisplayField>L2I_GPIN__c</errorDisplayField>
        <errorMessage>Please enter a valid GPIN (characters allowed A-Z, a-z, 0-9 and dash &quot;-&quot;)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_GPIN_Format</fullName>
        <active>true</active>
        <description>Using only select characters (a-z, A-Z, 0-9), GPIN must contain 3 or 4 characters prior to the dash and then 27 characters after. This only applies to users with a profile/permission set containing &quot;L2I_Aircraft_Validation&quot; custom permission</description>
        <errorConditionFormula>AND(
NOT(REGEX( L2I_GPIN__c,&quot;^[a-zA-Z0-9]{3,4}-[a-zA-Z0-9]*$&quot;)),
 $Permission.L2I_Aircraft_Validation)</errorConditionFormula>
        <errorDisplayField>L2I_GPIN__c</errorDisplayField>
        <errorMessage>Please enter a valid aircraft type designator for this GPIN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Line_Number_Format</fullName>
        <active>true</active>
        <description>Line Number cannot start with &quot;MSN&quot;</description>
        <errorConditionFormula>BEGINS(L2I_Line_Number__c , &quot;MSN&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Line_Number__c</errorDisplayField>
        <errorMessage>Invalid Line Number Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Preliminary_GPIN_Format</fullName>
        <active>true</active>
        <description>Preliminary GPIN must only contain the following characters: A-Z, a-z, 0-9 and dash &quot;-&quot;. This only applies to users with a profile/permission set containing &quot;L2I_Aircraft_Validation&quot; custom permission</description>
        <errorConditionFormula>AND(
NOT(REGEX( L2I_Preliminary_GPIN__c ,&quot;^[a-zA-Z0-9\\-]*$&quot;)),
 $Permission.L2I_Aircraft_Validation)</errorConditionFormula>
        <errorDisplayField>L2I_Preliminary_GPIN__c</errorDisplayField>
        <errorMessage>Please enter a valid Preliminary GPIN (characters allowed A-Z, a-z, 0-9 and dash &quot;-&quot;)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Registration_Number_Format</fullName>
        <active>true</active>
        <description>Registration cannot start with &quot;MSN&quot;</description>
        <errorConditionFormula>BEGINS( L2I_Registration_Number__c , &quot;MSN&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Registration_Number__c</errorDisplayField>
        <errorMessage>Invalid Registration Number Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Registration_Number_Unique</fullName>
        <active>true</active>
        <description>Registration Number must be different than Block, Fleet, Line Number</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( L2I_Registration_Number__c)), 
AND(OR(
LOWER( L2I_Registration_Number__c ) = LOWER( L2I_Block_Number__c ),
LOWER( L2I_Registration_Number__c ) = LOWER( L2I_Fleet_Number__c ),
LOWER( L2I_Registration_Number__c ) = LOWER( L2I_Line_Number__c ),
LOWER( L2I_Registration_Number__c ) = LOWER( L2I_Serial_Number__c )
)))</errorConditionFormula>
        <errorDisplayField>L2I_Registration_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid aircraft registration number assigned by a civil aviation authority. The Block, Fleet, Line and Serial numbers must be unique</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Serial_Number_Format</fullName>
        <active>true</active>
        <description>Serial Number cannot start with &quot;MSN&quot;</description>
        <errorConditionFormula>BEGINS( L2I_Serial_Number__c  , &quot;MSN&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Serial_Number__c</errorDisplayField>
        <errorMessage>Invalid Serial Number Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Serial_Number_Matches_Block</fullName>
        <active>true</active>
        <description>Serial Number must be different than Block Number</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( L2I_Serial_Number__c )), 
NOT(ISBLANK ( L2I_Block_Number__c )), 
CONTAINS(LOWER(  L2I_Serial_Number__c  ), LOWER( L2I_Block_Number__c )))</errorConditionFormula>
        <errorDisplayField>L2I_Serial_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid Serial Number</errorMessage>
    </validationRules>
</CustomObject>